--- a/Developer/SustainableChoiceAI/vite_react/webai/package.json
+++ b/Developer/SustainableChoiceAI/vite_react/webai/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "openai": "^4.52.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-google-button": "^0.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
